--- a/src/assets/css/shadows.css
+++ b/src/assets/css/shadows.css
@@ -1,14 +1,14 @@
 :root {
-    --shadow-1: 0 0 0 1px rgba(0 0 0 / 5%);
-    --shadow-2: 0 1px 2px 0 rgba(0 0 0 / 5%);
-    --shadow-3: 0 1px 3px 0 rgba(0 0 0 / 10%), 0 1px 2px 0 rgba(0 0 0 / 6%);
-    --shadow-4: 0 4px 6px -1px rgba(0 0 0 / 10%),
+    --v-inputs-shadow-1: 0 0 0 1px rgba(0 0 0 / 5%);
+    --v-inputs-shadow-2: 0 1px 2px 0 rgba(0 0 0 / 5%);
+    --v-inputs-shadow-3: 0 1px 3px 0 rgba(0 0 0 / 10%), 0 1px 2px 0 rgba(0 0 0 / 6%);
+    --v-inputs-shadow-4: 0 4px 6px -1px rgba(0 0 0 / 10%),
         0 2px 4px -1px rgba(0 0 0 / 6%);
-    --shadow-5: 0 10px 15px -3px rgba(0 0 0 / 10%),
+    --v-inputs-shadow-5: 0 10px 15px -3px rgba(0 0 0 / 10%),
         0 4px 6px -2px rgba(0 0 0 / 5%);
-    --shadow-6: 0 20px 25px -5px rgba(0 0 0 / 10%),
+    --v-inputs-shadow-6: 0 20px 25px -5px rgba(0 0 0 / 10%),
         0 10px 10px -5px rgba(0 0 0 / 4%);
-    --shadow-7: 0 25px 50px -12px rgba(0 0 0 / 25%);
-    --shadow-inner: inset 0 2px 4px 0 rgba(0 0 0 / 6%);
-    --shadow-focus: 0 0 0 2px currentcolor;
+    --v-inputs-shadow-7: 0 25px 50px -12px rgba(0 0 0 / 25%);
+    --v-inputs-shadow-inner: inset 0 2px 4px 0 rgba(0 0 0 / 6%);
+    --v-inputs-shadow-focus: 0 0 0 2px currentcolor;
 }
